# posture-pinger

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.py  pytest.ini  requirements.txt
.github/workflows/: data-checks.yml  title_check.py
include/: posture_analyzer.hpp
src/: PoseDetector.cpp  PoseDetector.hpp  PostureChecker.cpp  PostureChecker.hpp  Settings.cpp  Settings.hpp  Statistics.cpp  Statistics.hpp  db_manager.py  main.cpp  main.py  notifications.py  platform.hpp  pose_detector.py  pose_landmarks.py  posture_analyzer.cpp  resource.h  resource.rc  score_history.py  tray_application.py  webcam.py
src/tests/: test_notifications.py  test_pose_detector.py  test_score_history.py
